Site banner header changes on scroll, reorg css folder, added school logos

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -89,6 +89,7 @@
 
         <!--directives-->
         <script src="/js/directives/_directives.module.js"></script>
+        <script src="/js/directives/controls/rdc-background-image.js"></script>
         <script src="/js/directives/behaviors/rdc-collapse.js"></script>
         <script src="/js/directives/controls/rdc-banner-message.js"></script>
         <script src="js/directives/controls/rdc-flex-slider.js"></script>
@@ -96,6 +97,7 @@
         <script src="/js/directives/controls/rdc-light-gallery.js"></script>
         <script src="/js/directives/controls/rdc-map.js"></script>
         <script src="/js/directives/controls/rdc-popover-message.js"></script>
+        <script src="/js/directives/controls/rdc-tooltip.js"></script>
         <script src="/js/directives/dynamic-controls/popover-message.service.js"></script>
 
         <!-- App data -->
