--- a/src/client/js/pages/shell/footer.html
+++ b/src/client/js/pages/shell/footer.html
@@ -38,6 +38,26 @@
     </div>
 </nav>-->
 <footer>
+    <div class="footer-contact clearfix">
+        <ul>
+            <li>
+                <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank" class="contact-facebook">
+                    <i class="footer-icon fa fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="mailto:inforainbowdn@gmail.com" class="contact-email">
+                    <i class="footer-icon fa fa-envelope"></i>
+                </a>
+            </li>
+            <li>
+                <a href="tel:204-256-0672" class="contact-phone">
+                    <i class="footer-icon fa fa-phone"></i>
+                </a>
+            </li>
+
+        </ul>
+    </div>
     <small class="text-caption">
         Website coded in AngularJS and licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Code for this website can be found at <a href="https://github.com/flyer1/Rainbow" target="_blank">GitHub</a>.
     </small>
