--- a/src/client/js/pages/shell/nav.html
+++ b/src/client/js/pages/shell/nav.html
@@ -8,14 +8,14 @@
             <!-- only show standard menu at bigger resolutions -->
             <nav class="nav-menu-standard">
                 <div class="contact-nav pull-right">
-                    <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank" class="contact-facebook">
+                    <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank" class="contact-facebook" rdc-tooltip="Connect with us on Facebook" placement="bottom">
                         <i class="fa fa-facebook"></i>
                     </a>
-                    <a class="contact-email" href="mailto:inforainbowdn@gmail.com">
+                    <a class="contact-email" href="mailto:inforainbowdn@gmail.com" rdc-tooltip="Send us an email" placement="bottom">
                         <i class="fa fa-envelope"></i>
                     </a>
-                    <a href="tel:204-256-0672">
-                        <i class="contact-phone fa fa-phone"></i>
+                    <a href="tel:204-256-0672" class="contact-phone" rdc-tooltip="Call us at (204) 256-0672" placement="bottom">
+                        <i class="fa fa-phone"></i>
                     </a>
                 </div>
                 <ul class="pull-right">
