Created gulp-ftp task, site is now in prod, fixed up message/location data

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -97,6 +97,7 @@
         <script src="/js/directives/controls/rdc-light-gallery.js"></script>
         <script src="/js/directives/controls/rdc-map.js"></script>
         <script src="/js/directives/controls/rdc-popover-message.js"></script>
+        <script src="/js/directives/controls/rdc-scroll-top.js"></script>
         <script src="/js/directives/controls/rdc-tooltip.js"></script>
         <script src="/js/directives/dynamic-controls/popover-message.service.js"></script>
 
