--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -137,6 +137,9 @@
                                                 <div class="list-text">
                                                     <div class="list-text-section">
                                                         <p>
+                                                            <span>{{site.address.friendlyLocation}}</span>
+                                                        </p>
+                                                        <p>
                                                             <span>{{site.address.addressLine1}}</span>
                                                         </p>
                                                         <p>
