--- a/src/client/js/pages/shell/footer.html
+++ b/src/client/js/pages/shell/footer.html
@@ -1,42 +1,3 @@
-<!--<div class="main-footer">-->
-<!--<nav class="container">
-    <div class="footer-col">
-        <h3>CONTACT</h3>
-        <ul>
-            <li class="footer-col-item">
-                <a href="mailto:inforainbowdn@gmail.com">
-                    <i class="footer-icon fa fa-envelope-square"></i> Email
-                </a>
-            </li>
-            <li class="footer-col-item">
-                <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank">
-                    <i class="footer-icon fa fa-facebook-square"></i> Facebook
-                </a>
-            </li>
-            <li class="footer-col-item">
-                <a href="tel:204-256-0672"><i class="footer-icon fa fa-phone"></i>(204)-256-0672</a>
-            </li>
-
-        </ul>
-    </div>
-    <div class="footer-col">
-        <h3>SITES</h3>
-        <ul>
-            <li class="footer-col-item" ng-repeat="site in vm.sites | limitTo: 3">
-                <a ng-href="">
-                    {{site.name}}
-                </a>
-            </li>
-        </ul>
-        <ul>
-            <li class="footer-col-item" ng-repeat="site in vm.sites | limitTo: 10:3">
-                <a ng-href="">
-                    {{site.name}}
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>-->
 <footer>
     <div class="footer-contact clearfix">
         <ul>
@@ -58,11 +19,8 @@
 
         </ul>
     </div>
-    <small class="text-caption">
-        Website coded in AngularJS and licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Code for this website can be found at <a href="https://github.com/flyer1/Rainbow" target="_blank">GitHub</a>.
-    </small>
-    <span class="to-top pull-right">
-        <a ng-click="vm.scrollToTop()">Top</a>
+    <span class="text-caption">
+        Website coded in AngularJS and licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Code for this website can be found at <a href="https://github.com/flyer1/Rainbow" target="_blank">gitHub/flyer1</a>.
     </span>
+    <rdc-scroll-top></rdc-scroll-top>
 </footer>
-<!--</div>-->
