--- a/src/client/js/pages/site-details/site-details.html
+++ b/src/client/js/pages/site-details/site-details.html
@@ -65,15 +65,15 @@
                 <span>{{vm.site.schools.length}}</span>&nbsp;<ng-pluralize count="vm.site.schools.length" when="{'1': 'school','other': 'schools'}"></ng-pluralize>
             </p>
             <p ng-if="vm.site.locatedInSchool" class="sub-title">
-                {{vm.site.name}} is located inside of {{vm.site.schools[0].school.name}} school
+                {{vm.site.name}} is located inside of {{vm.site.schools[0].name}} school
             </p>
             <div class="row business-cards">
                 <div class="col-md-4" ng-repeat="school in vm.site.schools">
-                    <a class="card" ng-href="{{school.school.website}}" target="_blank">
-                        <span class="card-header" rdc-background-image="{{school.school.logo}}"></span>
+                    <a class="card" ng-href="{{school.website}}" target="_blank">
+                        <span class="card-header" rdc-background-image="{{school.logo}}"></span>
                         <p class="card-body">
-                            <h3><span ng-if="school.school.type ==='french-immersion'">&Eacute;cole</span> {{school.school.name}} <span ng-if="school.school.type !== 'french-immersion'">School</span></h3>
-                        <p>{{school.school.address}}</p>
+                            <h3><span ng-if="school.type ==='french-immersion'">&Eacute;cole</span> {{school.name}} <span ng-if="school.type !== 'french-immersion'">School</span></h3>
+                        <p>{{school.address}}</p>
                         <span class="link">School Website</span>
                         </p>
                     </a>
@@ -110,9 +110,9 @@
         <div class="row">
             <div class="cards cards-dark">
                 <div ng-repeat="program in vm.site.programs" class="card col-md-2">
-                    <h4 class="card-header">{{program.program.name}}</h4>
-                    <p>{{program.program.description}}</p>
-                    <p>Count: {{program.count}}</p>
+                    <h4 class="card-header">{{program.name}}</h4>
+                    <p>{{program.description}}</p>
+                    <p ng-if="program.count">Count: {{program.count}}</p>
                 </div>
             </div>
         </div>
