Added gource visualization link, metrics.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -85,6 +85,7 @@
         <script src="/js/core/_core.module.js"></script>
         <script src="/js/core/app.config.js"></script>
         <script src="/js/core/common.service.js"></script>
+        <script src="/js/core/performance-monitor.service.js"></script>
         <script src="/js/core/router.js"></script>
 
         <!--directives-->
