--- a/src/client/js/pages/shell/nav.html
+++ b/src/client/js/pages/shell/nav.html
@@ -18,6 +18,7 @@
                         <i class="fa fa-phone"></i>
                     </a>
                 </div>
+                <a><span>Watches: {{vm.performanceData.watchCount}}</span></a>
                 <ul class="pull-right">
                     <li>
                         <a ui-sref="shell.home" ui-sref-opts="{reload: true}" ng-class="{'is-active' : vm.isActive('home')}">Home</a>
