--- a/src/client/js/pages/site-details/site-details.html
+++ b/src/client/js/pages/site-details/site-details.html
@@ -85,7 +85,7 @@
                     <a class="card" ng-href="{{school.website}}" target="_blank">
                         <span class="card-header" rdc-background-image="{{school.logo}}"></span>
                         <p class="card-body">
-                            <h3><span ng-if="school.type ==='french-immersion'">&Eacute;cole</span> {{school.name}} <span ng-if="school.type === 'english'">School</span></h3>
+                            <h3><span ng-if="school.type ==='french-immersion' || school.type === 'dual-track'">&Eacute;cole</span> {{school.name}} <span ng-if="school.type === 'english' || school.type === 'dual-track'">School</span></h3>
                         <p>{{school.address}}</p>
                         <p class="link">School Website</p>
                         <p ng-if="!vm.site.locatedInSchool" class="footnote">{{vm.getTransportMethod(school.transport)}}</p>
