Added sitemap and last updated date to footer.

--- a/src/client/js/pages/shell/footer.html
+++ b/src/client/js/pages/shell/footer.html
@@ -19,8 +19,11 @@
 
         </ul>
     </div>
-    <span class="text-caption">
+    <p class="text-caption">
         Website coded in AngularJS and licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>. Code for this website can be found at <a href="https://github.com/flyer1/Rainbow" target="_blank">gitHub/flyer1</a>.
-    </span>
+    </p>
+    <p class="minor-text">
+        Last updated: {{vm.lastUpdateDate}}
+    </p>
     <rdc-scroll-top></rdc-scroll-top>
 </footer>
