--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <title>Rainbow</title>
     <meta name="description" content="Rainbow Day Nursery is one of the largest licensed daycare centres in Winnipeg with 4 full time locations and 2 before and after school locations">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <link rel="shortcut icon" href="/img/favicon.ico?v=0.83" />
+    <link rel="shortcut icon" href="/img/favicon.ico?v=0.83"/>
+    <link rel="alternate" href="http://rainbowdaynursery.ca/" hreflang="en-ca" />
     <title>Rainbow Day Nursery</title>
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
