--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,7 +10,12 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <link rel="shortcut icon" href="/img/favicon.ico?v=0.83"/>
-    <link rel="alternate" href="http://rainbowdaynursery.ca/" hreflang="en-ca" />
+    <link rel="alternate" href="http://rainbowdaynursery.ca/" hreflang="en-ca"/>
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <title>Rainbow Day Nursery</title>
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
