Updates for sage creek daycare phase 5 now that its open

--- a/src/client/js/pages/site-details/site-details.html
+++ b/src/client/js/pages/site-details/site-details.html
@@ -147,7 +147,7 @@
                     <p>{{vm.site.address.city}} {{vm.site.address.province}}</p>
                     <p>{{vm.site.address.postalCode}}</p>
                     <p class="details-trail">
-                        <a href="tel:{{vm.site.phone}}">{{vm.site.phone}}</a>
+                        Phone: <a href="tel:{{vm.site.phone}}">{{vm.site.phone}}</a>
                     </p>
                 </div>
             </div>
